# dependency-doctor

./: .gitignore  TODO.md  main.py  pyproject.toml  rio.toml
.cursor/rules/: python.mdc
docs/: ARCHITECTURE.md  PRD-dependency-doctor.md
src/controllers/: api_controller.py  cli_controller.py  web_controller.py
src/services/: github_scanner.py  security_scanner.py  update_checker.py
src/utils/: config.py  logging.py
src/web/: dashboard.py
tests/: test_config.py  test_github_scanner.py  test_logging.py  test_security_scanner.py  test_update_checker.py
